--- a/second.html
+++ b/second.html
@@ -4,85 +4,90 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>protfolio website</title>
+    <title>profile pics</title>
     <link rel="stylesheet" href="second.css">
 </head>
-<header>
-    <nav>
-        <ul>
-            <li>Home</li><a href="#"></a>
-            <li>About Me</li><a href="#"></a>
-            <li>My Skills</li><a href="#"></a>
-            <li>Contacts</li><a href="#"></a>
-            <li>My Project</li><a href="#"></a>
-        </ul>
-    </nav>
-</header>
 
 <body>
+    <header>
+        <nav>
+            <ul>
+                <a href="#Home">Home</a>
+                <a href="#AboutMe">About Me</a>
+                <a href="#MySkills">My Skills</a>
+                <a href="#My Projects">Projects</a>
+                <a href="#contact">Contact Us</a>
+            </ul>
+        </nav>
+        <section id="Home">
+            <img src="download.jpg" alt="my profile pic" height="100">
+            <h1>I am shadow </h1>
+            <p>12th passed out student today I learning web devlopment fron code with harry if you wanna join i give you
+                link</p>
+            <a href="https://www.youtube.com/watch?v=tVzUXW6siu0&list=PLu0W_9lII9agq5TrH9XLIKQvv0iaF2X3w"
+                target="_blank" rel="noopener noreferrer">join the course</a>
+
+        </section>
+    </header>
     <main>
-        <article>
-            <H3>About Me</H3>
-            <P>M name is shadow.I am a coder & gamer and i have a youtube channel. Lorem ipsum dolor sit amet
-                consectetur adipisicing elit. Ad quas unde sequi saepe vitae placeat doloremque laborum enim? Dolore
-                minima, sed, voluptatum quasi earum quae explicabo odit facere veritatis dolor possimus soluta sint
-                ducimus. Saepe ex at obcaecati cum illum quam veritatis a hic, quos dolor laborum voluptatem. Rem
-                deserunt cumque quod vel provident est eaque, quidem ullam, nesciunt autem deleniti omnis fuga magnam
-                porro laborum quos blanditiis eius laudantium mollitia dicta recusandae, id aut adipisci odio. Ratione
-                quam atque modi nihil necessitatibus quidem vel est fugit, iure quod. Molestiae animi, amet impedit
-                eligendi similique accusantium dolore velit optio ipsam! </P>
+        <article id="AboutMe">
+            <h2>About Me</h2>
+            <p>
+                My Name Is Raghvendra suresh basarwar.I'm a first year student in jain university bangalore.SO I'm a
+                good boy just like Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae eaque alias ad
+                quaerat. Porro nesciunt provident, nulla quasi dignissimos magni quae sint non. Corrupti ut odio nam
+                delectus repellat dolor fugit velit possimus beatae tempore, repellendus cum officia laudantium
+                asperiores. Molestias suscipit expedita nisi, repellat esse qui sit, facilis rem delectus perferendis
+                architecto ut exercitationem natus modi aspernatur iure aperiam fugiat quo maxime recusandae ipsa
+                maiores! Quaerat alias nihil beatae, ex consequuntur ipsum reprehenderit quidem labore, aliquid atque
+                maxime quibusdam quo quam esse? Eveniet ipsa perferendis minus voluptatum quam. Maxime, molestias quae
+                doloremque ut perspiciatis blanditiis, iure quod sint eveniet provident exercitationem iusto corporis
+                accusamus incidunt debitis! Ipsa iste voluptatem minus fuga, voluptates vel accusamus error aperiam
+                possimus neque, nisi, aliquid porro voluptatum?</p>
         </article>
-
-
-        <a href="https://www.youtube.com/@ShadowNinjas-t5w">my youtube channel</a>
-        <iframe 
-            src="https://www.youtube.com/embed/ChmKkPwNRoQ?si=HLnOAarE1tLjzNJK&amp;start=9" title="YouTube video player"
-            frameborder="0"
+        <div class="HELLO">This is my channel</div>
+        <iframe iframe width="590" height="369" src="https://www.youtube.com/embed/ChmKkPwNRoQ"
+            title="Hypno gameplay( no kill challenge) supersus game play" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>" frameborder="0"></iframe>
-        <h3>My Skills</h3>
-        <table>
-             <tr>
-                <th>Skills</th>
-                <th>Qualificataions</th>
-                </tr>
+        <div id="MySkills">
+            <table>
                 <tr>
-                    <td>Fast coding</td>
-                    <td>Beginner</td>
+                    <TH>SKILLS</TH>
+                    <TH>QUALIFICATONS</TH>
                 </tr>
-                <tr>
-                    <td>Super sus gamer</td>
-                    <td>Pro</td>
+                <TR>
+                    <TD>FAST CODING</TD>
+                    <TD>BEGINNER</TD>
+                </TR>
+                <TR>
+                    <TD>supersus GAMER</TD>
+                    <TD>PRO</TD>
+                </TR>
+            </table>
+        </div>
+        <div id="contact">
+            <h2>contact us</h2>
+            <form action="submit" method="post">
+            <div>
+                <label for="username">enter name</label>
+                <input type="text" name="Enter name" id="username" placeholder="enter your name">
+            </div>
+            <div><label for="email">enter your email</label>
+            <input type="email" name="emaail add" id="email" placeholder="enter your email address"></div>
+            <div><label for="number">mobile no. :</label>
+            <input type="number" name="mobile" id="number" placeholder="mobile number"></div>
+            <div class="submit"><input type="button" value="submit"></div>
 
-                </tr>
-
-
-        </table>
+        </div></form>
 
     </main>
+    <footer>
+        COPYRIGHT &copy;shadow All rights are reserved
+    </footer>
+
 
 
 </body>
-<footer>
-    <h3>Contact Us</h3>
-    <form action="contact form" method="post">
-        <div>
-            <label for="name">Enter your Name</label>
-            <input type="text" name="Enter your Name" id="name">
-        </div>
-        <div>
-            <label for="number">enter mobile no.</label>
-            <input type="number" name="mobile no." id="number">
-        </div>
-        <div>
-            <label for="email">Enter your email adress</label>
-            <input type="email" name="email adress" id="email">
-        </div>
-        <div>
-            <input type="button" value="submit" class="submit">
-        </div>
-
-    </form>
-</footer>
 
 </html>
